# one-code-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
apiv0/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py  widgets.py
apiv0/migrations/: 0001_initial.py  0002_auto_20201127_1633.py  0003_auto_20201127_1633.py  0004_auto_20201127_1656.py  0005_auto_20201127_2356.py  0006_auto_20201128_1121.py  0007_auto_20201128_1202.py  0008_auto_20201128_1218.py  0009_auto_20201128_1236.py  0010_auto_20201129_1130.py  0011_productcategory_description.py
main/: admin.py  apps.py  models.py  settings.py  urls.py  uwsgi.ini
main/migrations/: 0001_initial.py
meta/: admin.py  models.py
meta/migrations/: 0001_initial.py  0002_auto_20201127_1633.py  0003_auto_20201127_2356.py  0004_remove_producttypes_price.py
